--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
-@import url("https://fonts.googleapis.com/css2?family=Spartan&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Spartan:wght@400;500;700&display=swap");
 html {
   line-height: 1.15;
   /* 1 */
@@ -342,6 +342,8 @@ template {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  text-decoration: none;
+  list-style: none;
 }
 
 body {
@@ -352,14 +354,168 @@ body {
   background-color: #ffffff;
   background-image: url("../../images/bg-pattern-top-desktop.svg"), url("../../images/bg-pattern-bottom-desktop.svg");
   background-repeat: no-repeat;
-  background-size: 50% 50%;
+  background-size: 40% 40%, 75% 75%;
   background-position: top left, bottom right;
   font-size: 15px;
   font-family: 'Spartan', sans-serif;
 }
 
-h1 {
-  font-size: 2rem;
+h1, h2, h3, h4, h5, h6 {
+  margin: 0 auto;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: 480px 100px 520px;
+  grid-template-rows: 250px 75px 260px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.attribution {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+}
+
+.header {
+  grid-column: 1 / 2;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-around;
+}
+
+.header__title {
+  font-size: 2.7rem;
+  font-weight: 700;
   font-weight: 700;
   color: #502050;
+}
+
+.header__subtitle {
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.4rem;
+  color: #937b92;
+}
+
+.recommend {
+  grid-column: 3 / 4;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.recommend__list {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-between;
+  width: 100%;
+  height: 90%;
+}
+
+.recommend__item {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  padding-left: 2rem;
+  width: 80%;
+  height: 30%;
+  border-radius: .3rem;
+  background-color: #f7f2f7;
+  color: #502050;
+  font-weight: 700;
+  font-size: .75rem;
+}
+
+.recommend__item--star {
+  padding-right: 1.75rem;
+  color: #ff5e00;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.recommend__item:nth-child(1) {
+  align-self: flex-start;
+}
+
+.recommend__item:nth-child(2) {
+  align-self: center;
+}
+
+.recommend__item:nth-child(3) {
+  align-self: flex-end;
+}
+
+.article {
+  grid-column: 1 / 4;
+  grid-row: 3;
+  display: flex;
+  justify-content: space-between;
+}
+
+.article__item {
+  background-color: #502050;
+  color: #f7f2f7;
+  border-radius: 13.5px;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-between;
+  padding: 2rem;
+  width: 350px;
+  height: 225px;
+}
+
+.article__item:nth-child(1) {
+  align-self: flex-start;
+}
+
+.article__item:nth-child(2) {
+  align-self: center;
+}
+
+.article__item:nth-child(3) {
+  align-self: flex-end;
+}
+
+.article__header {
+  display: grid;
+  grid-template-columns: 60px 125px;
+  grid-template-rows: 20px 15px;
+  column-gap: 10px;
+  height: 70px;
+  align-content: center;
+  justify-content: flex-start;
+}
+
+.article__header img {
+  grid-row: span 2;
+  border-radius: 50%;
+  align-self: center;
+  width: 40px;
+}
+
+.article__header h1 {
+  grid-column: 2;
+  grid-row: 1;
+  font-size: .9rem;
+  width: 100%;
+}
+
+.article__header h2 {
+  grid-column: 2;
+  grid-row: 2;
+  font-size: .8rem;
+  font-weight: 400;
+  color: #ee68a4;
+  width: 100%;
+}
+
+.article__about {
+  margin-top: 2rem;
+  font-size: .8rem;
+  line-height: 1.5rem;
 }
