--- a/scss/4_base/_4_base.scss
+++ b/scss/4_base/_4_base.scss
@@ -1,5 +1,5 @@
 // fonts import
-@import url('https://fonts.googleapis.com/css2?family=Spartan&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Spartan:wght@400;500;700&display=swap');
     //font-family: 'Spartan', sans-serif;
 //
 
@@ -9,7 +9,7 @@ body {
     background-color: $white;
     background-image: url('../../images/bg-pattern-top-desktop.svg'), url('../../images/bg-pattern-bottom-desktop.svg');
     background-repeat: no-repeat;
-    background-size: 50% 50%;
+    background-size: 40% 40%, 75% 75%;
     background-position: top left, bottom right;
 
     // font-base
@@ -17,8 +17,6 @@ body {
     font-family: 'Spartan', sans-serif;
 }
 
-h1 {
-    font-size: 2rem;
-    font-weight: 700;
-    color: $dark-magenta;
+h1, h2, h3, h4, h5, h6 {
+    margin: 0 auto;
 }
