--- a/css/main.css
+++ b/css/main.css
@@ -354,7 +354,7 @@ body {
   background-color: #ffffff;
   background-image: url("../../images/bg-pattern-top-desktop.svg"), url("../../images/bg-pattern-bottom-desktop.svg");
   background-repeat: no-repeat;
-  background-size: 40% 40%, 75% 75%;
+  background-size: 40% 40%, 81% 81%;
   background-position: top left, bottom right;
   font-size: 15px;
   font-family: 'Spartan', sans-serif;
@@ -364,10 +364,18 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0 auto;
 }
 
+@media screen and (max-width: 850px) {
+  body {
+    background-image: url("../../images/bg-pattern-top-mobile.svg"), url("../../images/bg-pattern-bottom-mobile.svg");
+    background-size: 100% 27%, 100% 27%;
+    background-position: top center, bottom right;
+  }
+}
+
 .container {
   display: grid;
-  grid-template-columns: 480px 100px 520px;
-  grid-template-rows: 250px 75px 260px;
+  grid-template-columns: 480px 10vw 520px;
+  grid-template-rows: 250px 9vh 260px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -378,6 +386,31 @@ h1, h2, h3, h4, h5, h6 {
   position: fixed;
   bottom: 0;
   right: 0;
+}
+
+@media screen and (max-width: 1200px) {
+  .container {
+    grid-template-columns: 480px 10vw 30vw;
+    grid-template-rows: 250px 5vh 260px;
+  }
+}
+
+@media screen and (max-width: 850px) {
+  .container {
+    grid-template-columns: 85vw;
+    grid-template-rows: none;
+    width: max-content;
+    margin: 0 auto;
+    transform: translate(0, 0);
+    position: relative;
+    top: 10%;
+    left: 0;
+  }
+  .attribution {
+    margin-top: 8rem;
+    font-size: .7rem;
+    position: static;
+  }
 }
 
 .header {
@@ -460,13 +493,13 @@ h1, h2, h3, h4, h5, h6 {
 .article__item {
   background-color: #502050;
   color: #f7f2f7;
-  border-radius: 13.5px;
+  border-radius: 1rem;
   display: flex;
   flex-flow: column nowrap;
   justify-content: space-between;
   padding: 2rem;
-  width: 350px;
-  height: 225px;
+  width: 22rem;
+  height: 14rem;
 }
 
 .article__item:nth-child(1) {
@@ -483,10 +516,10 @@ h1, h2, h3, h4, h5, h6 {
 
 .article__header {
   display: grid;
-  grid-template-columns: 60px 125px;
-  grid-template-rows: 20px 15px;
-  column-gap: 10px;
-  height: 70px;
+  grid-template-columns: 3.5rem 8rem;
+  grid-template-rows: 1.25rem 1rem;
+  column-gap: .5rem;
+  height: 3rem;
   align-content: center;
   justify-content: flex-start;
 }
@@ -495,7 +528,7 @@ h1, h2, h3, h4, h5, h6 {
   grid-row: span 2;
   border-radius: 50%;
   align-self: center;
-  width: 40px;
+  width: 3rem;
 }
 
 .article__header h1 {
@@ -518,4 +551,98 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: 2rem;
   font-size: .8rem;
   line-height: 1.5rem;
+}
+
+@media screen and (max-width: 1200px) {
+  .recommend__list {
+    width: 85%;
+    height: 100%;
+  }
+  .recommend__item {
+    flex-flow: column nowrap;
+    justify-content: space-evenly;
+    width: 100%;
+    height: 30%;
+    padding-left: 0;
+  }
+  .recommend__item--star {
+    padding-right: 0;
+  }
+  .article__item {
+    width: 22rem;
+    height: 16rem;
+    padding: 1rem;
+    margin: 0 1rem;
+  }
+  .article__item:nth-child(1), .article__item:nth-child(2), .article__item:nth-child(3) {
+    align-self: center;
+  }
+  .article__header {
+    height: 3rem;
+  }
+}
+
+@media screen and (max-width: 850px) {
+  .header {
+    grid-column: 1;
+    width: 100%;
+    height: 230px;
+    margin: 0 auto;
+    text-align: center;
+    justify-content: space-between;
+  }
+  .header__title {
+    width: 80%;
+    font-size: 1.9rem;
+  }
+  .header__subtitle {
+    width: 100%;
+    font-size: .8rem;
+  }
+  .recommend {
+    grid-column: 1;
+    height: 350px;
+  }
+  .recommend__list {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 85%;
+  }
+  .recommend__item {
+    margin: .5rem 0;
+    width: 100%;
+    height: 30%;
+    font-size: .8rem;
+  }
+  .recommend__item--star {
+    font-size: 1.3rem;
+  }
+  .recommend__item:nth-child(1), .recommend__item:nth-child(2), .recommend__item:nth-child(3) {
+    align-self: center;
+  }
+  .article {
+    grid-column: 1;
+    justify-content: space-evenly;
+    height: 800px;
+    flex-flow: column;
+  }
+  .article__item {
+    width: 100%;
+    height: max-content;
+    padding: 1.5rem;
+    border-radius: 2%;
+  }
+  .article__header {
+    margin-top: .8rem;
+  }
+  .article__header h1 {
+    font-size: .8rem;
+  }
+  .article__header h2 {
+    font-size: .7rem;
+  }
+  .article__about {
+    font-size: .75rem;
+  }
 }
