--- a/scss/6_components/_6_components.scss
+++ b/scss/6_components/_6_components.scss
@@ -88,7 +88,7 @@
         background-color: $dark-magenta;
         color: $light-grayish-magenta;
 
-        border-radius: 13.5px;
+        border-radius: 1rem;
 
         display: flex;
         flex-flow: column nowrap;
@@ -96,9 +96,9 @@
         
         padding: 2rem;
 
-        width: 350px;
-        height: 225px;
-        
+        width: 22rem;
+        height: 14rem;
+
         &:nth-child(1) {
             align-self: flex-start;
         }
@@ -110,17 +110,14 @@
         &:nth-child(3) {
             align-self: flex-end;
         }
-
     }
 
     &__header {
         display: grid;
-        grid-template-columns: 60px 125px;
-        grid-template-rows: 20px 15px;
-        column-gap: 10px;
-        height: 70px;
-
-        // @include borderTest;
+        grid-template-columns: 3.5rem 8rem;
+        grid-template-rows: 1.25rem 1rem;
+        column-gap: .5rem;
+        height: 3rem;
 
         align-content: center;
         justify-content: flex-start;
@@ -130,7 +127,7 @@
             border-radius: 50%;
             align-self: center;
 
-            width: 40px;
+            width: 3rem;
         }
 
         h1 {
@@ -154,5 +151,138 @@
         margin-top: 2rem;
         font-size: .8rem;
         line-height: 1.5rem;
+    }
+}
+
+@include mediaquery(1200px) {
+    .recommend {  
+        &__list {
+            width: 85%;
+            height: 100%;
+        }
+    
+        &__item {
+            flex-flow: column nowrap;
+            justify-content: space-evenly;
+            
+            width: 100%;
+            height: 30%;
+
+            padding-left: 0;
+
+            &--star {
+                padding-right: 0;
+            }
+        }
+    }
+
+    .article {
+        &__item {
+            width: 22rem;
+            height: 16rem;
+
+            padding: 1rem;
+            margin: 0 1rem;
+
+            &:nth-child(1), &:nth-child(2), &:nth-child(3) {
+                align-self: center;
+            }
+        }
+        &__header {  
+            height: 3rem;
+        }
+    }
+}
+
+@include mediaquery(850px) {
+    .header {
+        grid-column: 1;
+
+        width: 100%;
+        height: 230px;
+
+        margin: 0 auto;
+        text-align: center;
+
+        justify-content: space-between;
+
+        &__title {
+            width: 80%;
+            font-size: 1.9rem;
+        }
+
+        &__subtitle {
+            width: 100%;
+            font-size: .8rem;
+        }
+    }
+
+    .recommend {
+        grid-column: 1;
+        height: 350px;
+
+
+
+        &__list {
+            display: flex;
+            flex-direction: column;
+
+            width: 100%;
+            height: 85%;
+        }
+
+        &__item {
+
+            margin: .5rem 0;
+
+            width: 100%;
+            height: 30%;
+
+            font-size: .8rem;
+
+            &--star {
+                font-size: 1.3rem;
+            }
+
+            &:nth-child(1), &:nth-child(2), &:nth-child(3) {
+                align-self: center;
+            }
+        }
+    }
+
+    .article {
+        grid-column: 1;
+
+        justify-content: space-evenly;
+
+        height: 800px;
+
+        flex-flow: column;
+
+        // @include borderTest;
+
+        &__item {
+            width: 100%;
+            height: max-content;
+            padding: 1.5rem;
+            border-radius: 2%;
+        }
+
+        &__header {
+            margin-top: .8rem;
+    
+            h1 {
+                font-size: .8rem;
+            }
+    
+            h2 {
+                font-size: .7rem;
+            }
+
+        }
+
+        &__about {
+            font-size: .75rem;
+        }
     }
 }
