--- a/css/main.css
+++ b/css/main.css
@@ -524,21 +524,21 @@ h1, h2, h3, h4, h5, h6 {
   justify-content: flex-start;
 }
 
-.article__header img {
+.article__header .comment__img {
   grid-row: span 2;
   border-radius: 50%;
   align-self: center;
   width: 3rem;
 }
 
-.article__header h1 {
+.article__header .comment__title {
   grid-column: 2;
   grid-row: 1;
   font-size: .9rem;
   width: 100%;
 }
 
-.article__header h2 {
+.article__header .comment__verified {
   grid-column: 2;
   grid-row: 2;
   font-size: .8rem;
@@ -636,10 +636,10 @@ h1, h2, h3, h4, h5, h6 {
   .article__header {
     margin-top: .8rem;
   }
-  .article__header h1 {
+  .article__header .comment__title {
     font-size: .8rem;
   }
-  .article__header h2 {
+  .article__header .comment__verified {
     font-size: .7rem;
   }
   .article__about {
