--- a/scss/6_components/_6_components.scss
+++ b/scss/6_components/_6_components.scss
@@ -122,7 +122,7 @@
         align-content: center;
         justify-content: flex-start;
     
-        img {
+        .comment__img {
             grid-row: span 2;
             border-radius: 50%;
             align-self: center;
@@ -130,14 +130,14 @@
             width: 3rem;
         }
 
-        h1 {
+        .comment__title {
             grid-column: 2;
             grid-row: 1;
             font-size: .9rem;
             width: 100%;
         }
 
-        h2 {
+        .comment__verified {
             grid-column: 2;
             grid-row: 2;
             font-size: .8rem;
@@ -271,11 +271,11 @@
         &__header {
             margin-top: .8rem;
     
-            h1 {
+            .comment__title {
                 font-size: .8rem;
             }
     
-            h2 {
+            .comment__verified {
                 font-size: .7rem;
             }
 
