--- a/css/main.css
+++ b/css/main.css
@@ -356,6 +356,9 @@ body {
   background-repeat: no-repeat;
   background-size: 40% 40%, 81% 81%;
   background-position: top left, bottom right;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-size: 15px;
   font-family: 'Spartan', sans-serif;
 }
@@ -369,6 +372,7 @@ h1, h2, h3, h4, h5, h6 {
     background-image: url("../../images/bg-pattern-top-mobile.svg"), url("../../images/bg-pattern-bottom-mobile.svg");
     background-size: 100% 27%, 100% 27%;
     background-position: top center, bottom right;
+    display: block;
   }
 }
 
@@ -376,13 +380,11 @@ h1, h2, h3, h4, h5, h6 {
   display: grid;
   grid-template-columns: 480px 10vw 520px;
   grid-template-rows: 250px 9vh 260px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  width: max-content;
 }
 
 .attribution {
+  font-weight: bold;
   position: fixed;
   bottom: 0;
   right: 0;
@@ -400,14 +402,9 @@ h1, h2, h3, h4, h5, h6 {
     grid-template-columns: 85vw;
     grid-template-rows: none;
     width: max-content;
-    margin: 0 auto;
-    transform: translate(0, 0);
-    position: relative;
-    top: 10%;
-    left: 0;
+    margin: 5rem auto;
   }
   .attribution {
-    margin-top: 8rem;
     font-size: .7rem;
     position: static;
   }
