--- a/scss/4_base/_4_base.scss
+++ b/scss/4_base/_4_base.scss
@@ -12,6 +12,10 @@ body {
     background-size: 40% 40%, 81% 81%;
     background-position: top left, bottom right;
 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
     // font-base
     font-size: 15px;
     font-family: 'Spartan', sans-serif;
@@ -26,5 +30,7 @@ h1, h2, h3, h4, h5, h6 {
         background-image: url("../../images/bg-pattern-top-mobile.svg"), url("../../images/bg-pattern-bottom-mobile.svg");
         background-size: 100% 27%, 100% 27%;
         background-position: top center, bottom right;
+
+        display: block;
     }
 }
