--- a/scss/5_objects/_5_objects.scss
+++ b/scss/5_objects/_5_objects.scss
@@ -2,14 +2,12 @@
     display: grid;
     grid-template-columns: 480px 10vw 520px;
     grid-template-rows: 250px 9vh 260px;
-
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    width: max-content;
 }
 
 .attribution {
+    font-weight: bold;
+
     position: fixed;
     bottom: 0;
     right: 0;
@@ -29,17 +27,10 @@
 
         width: max-content;
 
-        margin: 0 auto;
-
-        transform: translate(0, 0);
-
-        position: relative;
-        top: 10%;
-        left: 0;
+        margin: 5rem auto;
     }
 
     .attribution {
-        margin-top: 8rem;
         font-size: .7rem;
         position: static;
     }
