--- a/scss/4_base/_4_base.scss
+++ b/scss/4_base/_4_base.scss
@@ -7,7 +7,7 @@ body {
     @include fullscreen;
     // Background-config
     background-color: $white;
-    background-image: url('../../images/bg-pattern-top-desktop.svg'), url('../../images/bg-pattern-bottom-desktop.svg');
+    background-image: url('./../images/bg-pattern-top-desktop.svg'), url('./../images/bg-pattern-bottom-desktop.svg');
     background-repeat: no-repeat;
     background-size: 40% 40%, 81% 81%;
     background-position: top left, bottom right;
@@ -27,7 +27,7 @@ h1, h2, h3, h4, h5, h6 {
 
 @include mediaquery(850px) {
     body {
-        background-image: url("../../images/bg-pattern-top-mobile.svg"), url("../../images/bg-pattern-bottom-mobile.svg");
+        background-image: url("./../images/bg-pattern-top-mobile.svg"), url("./../images/bg-pattern-bottom-mobile.svg");
         background-size: 100% 27%, 100% 27%;
         background-position: top center, bottom right;
 
